--- a/index.html
+++ b/index.html
@@ -40,22 +40,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script
-src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-crossorigin="anonymous"
-></script>
-<script
-src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-crossorigin="anonymous"
-></script>
-<script
-src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-crossorigin="anonymous"
-></script>
+
 
 <!-- external js -->
 <script src="js/external.js"></script>
@@ -125,9 +110,11 @@ crossorigin="anonymous"
                           </li>
                         </ul>
                       </li>
+
                       <li class="nav-item">
-                        <a class="nav-link">
-                          <i class="fas fa-user-lock"></i> login</a
+                        
+                        <a data-toggle="modal" data-target="#register_id" href="#" class="nav-link">
+                          <i class="fas fa-user-lock"></i> Register</a
                         >
                       </li>
                     </ul>
@@ -151,6 +138,95 @@ crossorigin="anonymous"
           </div>
         </div>
       </nav>
+    </div>
+    <!-- register_id -->
+    <div class="modal fade" id="register_id" role="dialog">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <!-- Header -->
+          <div class="model-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>         
+          </div>
+         <!-- modal-body -->
+         <div class="modal-body">
+          <h4 class="text-center text-primary">Register</h4>
+
+          <form action="#" method="get" autocomplete="true">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-2">Adı:</div>
+                <div class="col-md-10">
+                  <div class="form-group">
+                    <input
+                      id="register_name"
+                      name="register_name"
+                      type="text"
+                      class="form-control"
+                      placeholder="lütfen adınızı giriniz"
+                      required
+                      autofocus
+                    />
+                  </div>
+                </div>
+
+                <div class="col-md-2">Soyadı:</div>
+                <div class="col-md-10">
+                  <div class="form-group">
+                    <input
+                      id="register_surname"
+                      name="register_surname"
+                      type="text"
+                      class="form-control"
+                      placeholder="lütfen soyadınızı giriniz"
+                      required
+                    />
+                  </div>
+                </div>
+
+                <div class="col-md-2">Şifre:</div>
+                <div class="col-md-10">
+                  <div class="form-group">
+                    <input
+                      id="register_password"
+                      name="register_password"
+                      type="text"
+                      class="form-control"
+                      placeholder="lütfen sifrenizi giriniz"
+                      required
+                    />
+                  </div>
+                </div>
+
+                <div class="col-md-2">Email:</div>
+                <div class="col-md-10">
+                  <div class="form-group">
+                    <input
+                      id="register_email"
+                      name="register_email"
+                      type="text"
+                      class="form-control"
+                      placeholder="lütfen emaliizi giriniz"
+                      required
+                    />
+                  </div>
+                </div>
+                <div class="col-md-2"></div>
+                <div class="col-md-10">
+                  <button type="reset" class="btn btn-danger">Temizle</button>
+                  <button type="submit" class="btn btn-primary">Gönder</button>
+                </div>
+
+              </div>
+            </div>
+          </form>
+        </div>
+            <!-- footer -->
+            <div class="modal-footer">
+              <button type="button" class="btn btn-danger" data-dismiss="modal">kapat</button>
+            </div>
+        </div>
+      </div>
+
     </div>
     <p>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nam iusto
@@ -291,7 +367,22 @@ crossorigin="anonymous"
       Officiis dolores nam suscipit, temporibus nisi possimus doloremque ullam
       id, accusamus omnis velit ut.
     </p>
-
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script
+src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+crossorigin="anonymous"
+></script>
+<script
+src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+crossorigin="anonymous"
+></script>
+<script
+src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+crossorigin="anonymous"
+></script>
     
   </body>
 </html>
