--- a/index.html
+++ b/index.html
@@ -13,31 +13,25 @@
     <meta name="author" content="Ali ERGÜL" />
     <meta name="title" content="Google ve/veya other browser show in" />
     <meta name="description" content="html5,css3,js,jquery,bootstrap" />
-
+  <!-- google font -->
+  <link
+  href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap"
+  rel="stylesheet"
+  />
+  <!-- external css -->
+  <link rel="stylesheet" href="style.css" />
+  <!-- font-awesome  -->
+  <link
+  rel="stylesheet"
+  href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+  integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+  crossorigin="anonymous"
+/>
     <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <!-- font-awesome  -->
-    <link
-      rel="stylesheet"
-      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
-      crossorigin="anonymous"
-    />
-
-    <!-- google font -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap"
-      rel="stylesheet"
-    />
-
-    <!-- external css -->
-    <link rel="stylesheet" href="style.css" />
+ 
   </head>
   <body>
 
@@ -47,187 +41,305 @@
 
     <!-- Optional JavaScript -->
 
+ <!-- navbar start -->
+ <div
+ class="container-fluid"
+ style="position: fixed !important; top: 0; z-index: 4"
+>
+ <nav id="navbar_id" class="navbar navbar-expand-lg navbar-dark bg-dark">
+   <div class="container-fluid">
+     <div class="row">
+       <div class="col-md-3">
+         <a class="navbar-brand" href="#">
+           <img src="img/logo.jpg" id="logo" alt="" srcset="" />
+         </a>
+         <button
+           class="navbar-toggler"
+           type="button"
+           data-bs-toggle="collapse"
+           data-bs-target="#navbarSupportedContent"
+           aria-controls="navbarSupportedContent"
+           aria-expanded="false"
+           aria-label="Toggle navigation"
+         >
+           <span class="navbar-toggler-icon"></span>
+         </button>
+       </div>
+       <div class="col-md-9">
+         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+           <div class="row">
+             <div class="col-md-8">
+               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                 <li class="nav-item">
+                   <a class="nav-link active" aria-current="page" href="#"
+                     ><i class="fas fa-home"></i> Anasayfa</a
+                   >
+                 </li>
+                 <li class="nav-item">
+                   <a class="nav-link" href="#"
+                     ><i class="fas fa-newspaper"></i> Haberler</a
+                   >
+                 </li>
+                 <li class="nav-item dropdown">
+                   <a
+                     class="nav-link dropdown-toggle"
+                     href="#"
+                     id="navbarDropdown"
+                     role="button"
+                     data-bs-toggle="dropdown"
+                     aria-expanded="false"
+                   >
+                     Dropdown
+                   </a>
+                   <ul
+                     class="dropdown-menu"
+                     aria-labelledby="navbarDropdown"
+                   >
+                     <li><a class="dropdown-item" href="#">Action</a></li>
+                     <li>
+                       <a class="dropdown-item" href="#">Another action</a>
+                     </li>
+                     <li><hr class="dropdown-divider" /></li>
+                     <li>
+                       <a class="dropdown-item" href="#"
+                         >Something else here</a
+                       >
+                     </li>
+                   </ul>
+                 </li>
+                 <li class="nav-item">
+                   <a
+                     data-toggle="modal"
+                     data-target="#register_id"
+                     href="#"
+                     class="nav-link"
+                   >
+                     <i class="fas fa-user-lock"></i> Register</a
+                   >
+                 </li>
+               </ul>
+             </div>
+             <div class="col-md-4">
+               <form class="d-flex">
+                 <input
+                   class="form-control me-2"
+                   type="search"
+                   placeholder="Search"
+                   aria-label="Search"
+                 />
+                 <button class="btn btn-outline-success" type="submit">
+                   Search
+                 </button>
+               </form>
+             </div>
+           </div>
+         </div>
+       </div>
+     </div>
+   </div>
+ </nav>
+</div>
+<!-- navbar ends -->
+<!-- register_id -->
+<div class="modal fade" id="register_id" role="dialog">
+ <div class="modal-dialog">
+   <div class="modal-content">
+     <!-- modal-header -->
+     <div class="modal-header">
+       <button type="button" class="close" data-dismiss="modal">
+         &times;
+       </button>
+     </div>
+     <!-- modal-body -->
+     <div class="modal-body">
+       <h4 class="text-center text-primary">Register</h4>
 
-    <div class="container-fluid" style="position: fixed !important; top: 0">
-      <nav id="navbar_id" class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-md-3">
-              <a class="navbar-brand" href="#">
-                <img src="img/logo.png" id="logo" alt="" srcset="" />
-              </a>
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-              >
-                <span class="navbar-toggler-icon"></span>
-              </button>
+       <form action="#" method="get" autocomplete="true">
+         <div class="container">
+           <div class="row">
+             <div class="col-md-2">Adı:</div>
+             <div class="col-md-10">
+               <div class="form-group">
+                 <input
+                   id="register_name"
+                   name="register_name"
+                   type="text"
+                   class="form-control"
+                   placeholder="lütfen adınızı giriniz"
+                   required
+                   autofocus
+                 />
+               </div>
+             </div>
+
+             <div class="col-md-2">Soyadı:</div>
+             <div class="col-md-10">
+               <div class="form-group">
+                 <input
+                   id="register_surname"
+                   name="register_surname"
+                   type="text"
+                   class="form-control"
+                   placeholder="lütfen soyadınızı giriniz"
+                   required
+                 />
+               </div>
+             </div>
+
+             <div class="col-md-2">Şifre:</div>
+             <div class="col-md-10">
+               <div class="form-group">
+                 <input
+                   id="register_password"
+                   name="register_password"
+                   type="text"
+                   class="form-control"
+                   placeholder="lütfen sifrenizi giriniz"
+                   required
+                 />
+               </div>
+             </div>
+
+             <div class="col-md-2">Email:</div>
+             <div class="col-md-10">
+               <div class="form-group">
+                 <input
+                   id="register_email"
+                   name="register_email"
+                   type="text"
+                   class="form-control"
+                   placeholder="lütfen emaliizi giriniz"
+                   required
+                 />
+               </div>
+             </div>
+
+             <div class="col-md-2"></div>
+             <div class="col-md-10">
+               <button type="reset" class="btn btn-danger">Temizle</button>
+               <button type="submit" class="btn btn-primary">
+                 Gönder
+               </button>
+             </div>
+           </div>
+         </div>
+       </form>
+     </div>
+     <!-- modal-footer -->
+     <div class="modal-footer">
+       <button type="button" class="btn btn-danger" data-dismiss="modal">
+         Kapat
+       </button>
+     </div>
+   </div>
+ </div>
+</div>
+    <!-- --------------------------  -->
+    <!-- header start -->
+    <header>
+      <div
+        id="carouselExampleCaptions"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="img/img3.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Bilge Adam</h5>
+              <p>
+                Some representative placeholder content for the first slide.
+              </p>
             </div>
-            <div class="col-md-9">
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <div class="row">
-                  <div class="col-md-8">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#"
-                          ><i class="fas fa-home"></i> Anasayfa</a
-                        >
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#"
-                          ><i class="fas fa-newspaper"></i> Haberler</a
-                        >
-                      </li>
-                      <li class="nav-item dropdown">
-                        <a
-                          class="nav-link dropdown-toggle"
-                          href="#"
-                          id="navbarDropdown"
-                          role="button"
-                          data-bs-toggle="dropdown"
-                          aria-expanded="false"
-                        >
-                          Dropdown
-                        </a>
-                        <ul
-                          class="dropdown-menu"
-                          aria-labelledby="navbarDropdown"
-                        >
-                          <li><a class="dropdown-item" href="#">Action</a></li>
-                          <li>
-                            <a class="dropdown-item" href="#">Another action</a>
-                          </li>
-                          <li><hr class="dropdown-divider" /></li>
-                          <li>
-                            <a class="dropdown-item" href="#"
-                              >Something else here</a
-                            >
-                          </li>
-                        </ul>
-                      </li>
-
-                      <li class="nav-item">
-                        
-                        <a data-toggle="modal" data-target="#register_id" href="#" class="nav-link">
-                          <i class="fas fa-user-lock"></i> Register</a
-                        >
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="col-md-4">
-                    <form class="d-flex">
-                      <input
-                        class="form-control me-2"
-                        type="search"
-                        placeholder="Search"
-                        aria-label="Search"
-                      />
-                      <button class="btn btn-outline-success" type="submit">
-                        Search
-                      </button>
-                    </form>
-                  </div>
-                </div>
-              </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="img/img2.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>
+                Some representative placeholder content for the second slide.
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="img/img1.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>
+                Some representative placeholder content for the third slide.
+              </p>
             </div>
           </div>
         </div>
-      </nav>
-    </div>
-    <!-- register_id -->
-    <div class="modal fade" id="register_id" role="dialog">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <!-- Header -->
-          <div class="model-header">
-            <button type="button" class="close" data-dismiss="modal">&times;</button>         
-          </div>
-         <!-- modal-body -->
-         <div class="modal-body">
-          <h4 class="text-center text-primary">Register</h4>
-
-          <form action="#" method="get" autocomplete="true">
-            <div class="container">
-              <div class="row">
-                <div class="col-md-2">Adı:</div>
-                <div class="col-md-10">
-                  <div class="form-group">
-                    <input
-                      id="register_name"
-                      name="register_name"
-                      type="text"
-                      class="form-control"
-                      placeholder="lütfen adınızı giriniz"
-                      required
-                      autofocus
-                    />
-                  </div>
-                </div>
-
-                <div class="col-md-2">Soyadı:</div>
-                <div class="col-md-10">
-                  <div class="form-group">
-                    <input
-                      id="register_surname"
-                      name="register_surname"
-                      type="text"
-                      class="form-control"
-                      placeholder="lütfen soyadınızı giriniz"
-                      required
-                    />
-                  </div>
-                </div>
-
-                <div class="col-md-2">Şifre:</div>
-                <div class="col-md-10">
-                  <div class="form-group">
-                    <input
-                      id="register_password"
-                      name="register_password"
-                      type="text"
-                      class="form-control"
-                      placeholder="lütfen sifrenizi giriniz"
-                      required
-                    />
-                  </div>
-                </div>
-
-                <div class="col-md-2">Email:</div>
-                <div class="col-md-10">
-                  <div class="form-group">
-                    <input
-                      id="register_email"
-                      name="register_email"
-                      type="text"
-                      class="form-control"
-                      placeholder="lütfen emaliizi giriniz"
-                      required
-                    />
-                  </div>
-                </div>
-                <div class="col-md-2"></div>
-                <div class="col-md-10">
-                  <button type="reset" class="btn btn-danger">Temizle</button>
-                  <button type="submit" class="btn btn-primary">Gönder</button>
-                </div>
-
-              </div>
-            </div>
-          </form>
-        </div>
-            <!-- footer -->
-            <div class="modal-footer">
-              <button type="button" class="btn btn-danger" data-dismiss="modal">kapat</button>
-            </div>
-        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Önceki</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Sonraki</span>
+        </button>
       </div>
+    </header>
+    <!-- header finish -->
+    <!-- --------------------------  -->
+    <!--main Start-->
+    <main>
 
-    </div>
+    </main>
+      <!-- main End -->
+      <!-- --------------------------  -->
+      <!--footer Start-->
+    <footer>
+
+    </footer>
+      <!-- footer End -->
+
+   
     <p>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nam iusto
       officiis autem, vero incidunt, aliquam ad impedit, voluptates dolore quam
@@ -368,6 +480,12 @@
       id, accusamus omnis velit ut.
     </p>
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
+ 
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+  
+
 <script
 src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
