--- a/index.html
+++ b/index.html
@@ -334,151 +334,36 @@
       <!-- main End -->
       <!-- --------------------------  -->
       <!--footer Start-->
-    <footer>
+    <footer class="bg-dark text-white">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <ul>
 
+              <li><i class="fa fa-address-book" aria-hidden="true"></i><a href="">Başakşehir/İSTANBUL </a></li>
+
+              <li><i class="fa fas fa-mail-bulk" aria-hidden="true"></i></i><a href="mailto:alierqul@hotmail.com">Alierqul@hotmail.com </a></li>
+
+              <li><i class="fas fa-mobile    "></i><a href="tel:+905436168048"> +90(543)616-80-48 </a></li>
+
+            </ul>
+
+
+          </div>
+          <div class="col-md-6">
+            <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="300" id="gmap_canvas" 
+              src="https://maps.google.com/maps?q=Kad%C4%B1k%C3%B6y,%C4%B0stanbul&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>            
+              <br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style>
+              <style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
+
+          </div>
+        </div>
+      </div>
     </footer>
       <!-- footer End -->
 
    
-    <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nam iusto
-      officiis autem, vero incidunt, aliquam ad impedit, voluptates dolore quam
-      expedita distinctio aliquid quo sed sit adipisci? Eum, ut! Odit incidunt
-      deserunt, doloribus recusandae consectetur amet eveniet ullam voluptatibus
-      ex voluptatem dicta dolores nobis vero, labore facilis eaque esse
-      accusantium ipsam nihil, quam laboriosam! Asperiores id vero mollitia
-      culpa. Reprehenderit atque dolores tenetur porro odit maxime ullam
-      voluptatem quod alias, provident omnis cumque aliquid cum praesentium iure
-      velit accusamus sint ratione similique fugit. Laborum quaerat laboriosam
-      ut totam error. Tempora quo sed similique facere, consequuntur inventore
-      vitae cumque ea nulla delectus voluptatem asperiores. Ipsa sint temporibus
-      eaque veniam, nisi qui voluptas pariatur quisquam dolores deleniti nostrum
-      harum facilis vel. Voluptatibus aliquid repellat delectus voluptatum
-      libero iusto aspernatur saepe eius error! Recusandae, dolores.
-      Necessitatibus nulla dolor reprehenderit laudantium consectetur vero! Sed
-      quos consequuntur ad autem at tempora! Numquam, saepe nostrum. Quis
-      voluptatibus ipsam fuga esse perferendis harum officiis explicabo, id
-      quibusdam dicta eum ab dolorem odio excepturi incidunt! Odit sed vel
-      molestias aspernatur officiis voluptatem molestiae adipisci officia,
-      facilis corrupti. Velit amet corrupti qui non ducimus commodi enim magni
-      ratione dicta perspiciatis illum, fugiat odit, ea eos porro. Nobis
-      accusantium commodi amet ipsum ratione. Voluptas odio inventore doloribus
-      cupiditate alias. Asperiores ratione magni voluptas. Animi, porro.
-      Voluptates facilis dolores accusantium iure est, deserunt doloremque
-      quibusdam adipisci omnis, odit qui, ratione distinctio odio animi quas ab
-      iusto ipsam reprehenderit quisquam cupiditate? Iusto, vero ut quaerat
-      placeat aut, consectetur ipsum quod tenetur ipsam quo nostrum similique
-      labore blanditiis rem excepturi assumenda provident facilis quibusdam
-      quidem amet perspiciatis. Consectetur voluptatibus doloribus similique
-      delectus! Aliquam eos, id numquam assumenda optio tempora inventore a?
-      Voluptatum enim facere, adipisci vero placeat commodi reprehenderit sed
-      asperiores quos iure quas iste expedita magnam praesentium. Eveniet
-      asperiores dolorum maxime! Voluptas, similique? Possimus porro voluptatem
-      suscipit ullam. Illo exercitationem velit, ex odit doloremque recusandae
-      dolorum modi obcaecati tenetur repellat. Voluptas neque repellat iure eos
-      corporis animi assumenda officia ipsum temporibus. Voluptatibus, maxime
-      aliquid qui explicabo optio doloremque dignissimos quis ratione cupiditate
-      tempore possimus delectus blanditiis vel a praesentium quaerat facere
-      repellendus! Beatae iste minus accusamus nisi laborum doloremque facere
-      necessitatibus! Quia amet quam architecto aliquid nobis at ad repellat,
-      repellendus exercitationem voluptatum. Nam praesentium culpa quae, eveniet
-      numquam, necessitatibus qui officiis quibusdam assumenda dolor maxime
-      doloremque. Distinctio exercitationem quo suscipit? Error nesciunt vero,
-      ipsa molestias possimus, praesentium ea exercitationem nisi inventore
-      soluta repellat quia. Aperiam assumenda error minima saepe soluta illo,
-      voluptate dicta accusantium, laborum, delectus vero veniam voluptates
-      beatae. Praesentium explicabo asperiores, iste veritatis error sint
-      aliquam est obcaecati dolorem temporibus hic quidem ducimus eius,
-      architecto illum quaerat placeat beatae reiciendis consequatur officiis
-      eos fuga commodi? Officiis, ab eos. Eos, veniam? Repudiandae consequatur
-      illo eos, vel nobis alias. Cupiditate soluta distinctio quia a ex at
-      laudantium dolor? Voluptate officia quos placeat accusantium voluptatibus
-      odit fugiat, quae ipsa consectetur molestiae. Explicabo dolore soluta eius
-      et dolorem enim amet laborum asperiores accusantium cupiditate ducimus ad
-      modi atque omnis iste dolorum voluptatum laudantium, velit ipsum animi ut.
-      Aspernatur nostrum perspiciatis dolorum neque. Molestiae in dicta minus
-      ipsum saepe accusantium soluta nemo excepturi sunt, quaerat eos veniam
-      dolorum eius suscipit quo ipsam earum quasi labore dolore magni! Similique
-      placeat eius minus suscipit accusamus. Sunt cupiditate obcaecati culpa
-      eligendi laudantium tenetur praesentium aliquam unde mollitia dignissimos
-      magni similique et animi qui, enim, laboriosam nam voluptas ea asperiores
-      labore facere. Voluptate quos rem velit delectus. Magni impedit nostrum
-      beatae culpa provident consequatur adipisci dicta perspiciatis explicabo
-      vitae ut corporis dignissimos voluptate, maxime optio enim, est,
-      exercitationem dolorum. Itaque quaerat excepturi vero optio! Odio, vel
-      labore? Quibusdam eos ex dignissimos dolore, ea, exercitationem optio,
-      distinctio deleniti quod adipisci assumenda. Doloribus voluptatibus sunt
-      repudiandae ab optio voluptatem totam distinctio eligendi, quos saepe at
-      ipsa numquam amet quae! Saepe temporibus labore quas nesciunt dignissimos
-      molestias. Debitis non libero dolore rerum veniam illum fugiat laudantium
-      quaerat tempore aliquam aspernatur minima accusamus, iure ducimus
-      molestiae corporis omnis repellendus, aperiam architecto. Illo ad
-      assumenda vel itaque natus harum excepturi sit iure. Id, temporibus autem.
-      Consequuntur architecto veniam iure quos earum, alias maxime dolorem rem
-      dolore corporis numquam quaerat. Odit, provident accusantium? Qui, veniam
-      nesciunt. Ullam reprehenderit assumenda eius culpa perspiciatis omnis quas
-      asperiores, veniam deserunt unde. Inventore voluptate, similique dolorum
-      distinctio eaque quaerat est deserunt beatae doloremque sapiente amet
-      minus voluptatibus! Ullam velit, animi neque esse veniam error. Eos fuga
-      recusandae excepturi fugiat delectus dolorum nisi ex sequi obcaecati
-      suscipit. Natus deserunt libero at obcaecati corporis, facilis officiis
-      quae qui quis. Neque temporibus labore fugit. Eligendi fugiat sequi
-      veritatis nostrum, mollitia maxime beatae reprehenderit, odit iusto labore
-      minima eveniet ab vel cupiditate facere corrupti qui ipsum, vero illo
-      omnis quis quia? Voluptate at doloribus harum sit dignissimos nulla
-      repudiandae aspernatur soluta nostrum obcaecati quisquam recusandae culpa
-      aliquam ullam deleniti, mollitia architecto molestiae reprehenderit
-      accusantium velit ex similique! Dolor doloremque praesentium eum. Veniam
-      id at maiores, est sequi, optio officiis ex sapiente, nostrum totam alias
-      amet aliquid non incidunt perspiciatis dolore quaerat excepturi nulla
-      eaque consectetur magni. Ratione dolore pariatur at deserunt. Illum
-      deleniti excepturi quaerat dolor voluptate molestiae doloribus
-      perspiciatis fuga nisi, iure vero alias amet ipsa harum officia, neque
-      ratione aliquid sapiente. Vero minus veniam repudiandae libero autem
-      deserunt architecto? Hic perferendis illo tenetur quo id totam tempora eum
-      incidunt nulla dignissimos nostrum temporibus, porro quibusdam amet
-      impedit nesciunt suscipit, tempore voluptatum! Obcaecati soluta impedit
-      eum! Ullam porro quidem itaque. Repellat totam iste, doloremque, non
-      perspiciatis quis nam obcaecati aliquam delectus optio dolore animi magni
-      dolorem. Saepe illo perspiciatis eligendi fugit illum nisi? Id doloribus,
-      quas nihil quibusdam officiis molestiae? Adipisci officia numquam modi
-      earum debitis voluptate rerum tempore? Tempora atque alias minus, quae
-      blanditiis sunt molestias sapiente impedit unde, non hic mollitia
-      praesentium aperiam soluta, aliquam asperiores maiores earum. Corporis,
-      nihil rerum! Vel quae atque laborum voluptatibus. Asperiores, repellat
-      odit. Nam necessitatibus nostrum architecto dolorum pariatur sit corrupti
-      voluptates quod iusto, hic, omnis quisquam unde fugit provident vero
-      nesciunt! Saepe, temporibus similique. Doloremque, assumenda? Ex
-      voluptatum eaque consequuntur deleniti. Suscipit mollitia reiciendis quia
-      expedita odio officia? Eligendi accusamus mollitia quos quasi quisquam
-      illum placeat repellat, ratione, dolore accusantium commodi! Optio commodi
-      ex nemo, deleniti delectus corporis. Libero beatae dicta ut, facere
-      laboriosam ullam? Incidunt vel vitae ipsam odit itaque earum possimus,
-      laboriosam rem, eius ipsum aperiam est eligendi voluptatem? Nemo iusto
-      sint alias explicabo pariatur ipsam tempora neque, illum nam recusandae
-      ipsum quisquam eius laboriosam, animi quod ullam autem doloribus maiores
-      itaque adipisci. Quasi molestiae corporis libero et aliquid. Distinctio
-      quisquam aspernatur nobis fuga. Est dolore accusantium explicabo enim
-      harum iste officiis perspiciatis! Voluptatem quo maxime aliquid nam
-      aspernatur repudiandae optio harum quisquam ut. Commodi vel ipsum
-      perspiciatis asperiores? Error quas facilis recusandae dignissimos, eius,
-      aliquam perspiciatis ipsa assumenda iure maiores ipsam esse nostrum,
-      distinctio voluptatum temporibus. Atque quidem doloribus accusamus dolorem
-      itaque vitae. Incidunt ea possimus iure doloremque. Quas inventore
-      suscipit dolores id repudiandae, esse nihil architecto nesciunt qui quis
-      impedit praesentium commodi optio illum fugit veritatis corporis magnam ab
-      placeat expedita eos? Error et saepe voluptate quibusdam. Adipisci debitis
-      consectetur rem. Accusantium dolorum quas perspiciatis molestiae ipsam
-      fugit sapiente quis tempore architecto, corrupti a voluptas doloribus
-      saepe cum quidem? Earum animi corrupti debitis laudantium non possimus
-      dolor. A repellat fugit, qui quasi perspiciatis odit, dolores ea non
-      fugiat doloremque exercitationem? Dicta, nam. Aliquam nobis illo libero
-      blanditiis, velit similique, perspiciatis officia amet laudantium numquam
-      saepe voluptatum sequi? At, veritatis sit delectus expedita dolor
-      voluptatum saepe eum sequi? Dolor, sint animi. Adipisci, nobis distinctio?
-      Officiis dolores nam suscipit, temporibus nisi possimus doloremque ullam
-      id, accusamus omnis velit ut.
-    </p>
+   
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
  
